AWS/hp-monitoring-aws/kustomize/base/grafana/01-grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: observability
spec:
  hosts:
  - grafana.homeplate.site
  gateways:
  - istio-system/homeplate-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kps-grafana.observability.svc.cluster.local
        port:
          number: 80
